--- a/deploy/400-catcher-ingress.yaml
+++ b/deploy/400-catcher-ingress.yaml
@@ -8,7 +8,7 @@ metadata:
   namespace: foghorn
 spec:
   rules:
-  - host: catcher.example.com
+  - host: catcher.192.168.99.100.xip.io
     http:
       paths:
       - backend:
