Update image field with protocol prefix
ko now expects the path specified in the image field to have the ko://
prefix. This commit brings the deployment manifests in line with this
requirement.

--- a/deploy/200-catcher-deployment.yaml
+++ b/deploy/200-catcher-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: catcher
-        image: github.com/foghornci/foghorn/cmd/catcher
+        image: ko://github.com/foghornci/foghorn/cmd/catcher
         ports:
         - containerPort: 8080
         env:
